--- a/projekt_dashboard/Dashboard/dialog.ui
+++ b/projekt_dashboard/Dashboard/dialog.ui
@@ -214,17 +214,7 @@
      </widget>
     </item>
     <item>
-     <spacer name="verticalSpacer">
-      <property name="orientation">
-       <enum>Qt::Vertical</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>20</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
+     <widget class="QTextBrowser" name="datafrabil2"/>
     </item>
     <item>
      <widget class="QSlider" name="pwm_slider">
